--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>STOP! That Link Could Be a Trick – Read This First!</title>
+  <title>🚫 STOP! That Link Could Be a Trick – Read This First!</title>
 </head>
-<body>
-  <h1>STOP! That Link Could Be a Trick – Read This First!</h1>
+<body style="font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; background-color: #fff8e1; color: #333;">
+  <h1>🚫 STOP! That Link Could Be a Trick – Read This First! ⚠️</h1>
 
   <p>
-    Before you dive into the Diwali fun and open any link that comes your way — <strong>STOP</strong> and <strong>THINK</strong>.
+    Before you dive into the Diwali fun 🪔 and open any link that comes your way — <strong>STOP ✋</strong> and <strong>THINK 💭</strong>.
   </p>
 
   <p>
-    This is the time when many fake or harmful links are shared. They may look like Diwali offers, gifts, or messages... but some can be dangerous. They can steal your personal information or harm your phone.
+    This is the time when many fake or harmful links are shared. They may look like 🎁 Diwali offers, gifts, or festive messages... but some can be 🧨 dangerous. They can steal your 🔐 personal information or harm your 📱 phone.
   </p>
 
   <p>
-    So, only click on links you trust and always double-check who sent it.
+    ✅ Only click on links you trust and always double-check who sent it.
   </p>
 
   <p>
-    Let's keep this festival full of light, not fright.
+    Let’s keep this festival full of ✨ light, not 😨 fright.
   </p>
 
   <p>
-    Wishing you a Happy and Safe Diwali!
+    Wishing you a 🎆 Happy and Safe Diwali! 🪔
   </p>
 
-  <p>- Karan</p>
+  <p style="font-weight: bold;">– Karan 🙌</p>
 </body>
 </html>
