--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     Wishing you a 🎆 Happy and Safe Diwali! 🪔
   </p>
 
-  <p style="font-weight: bold;">– Karan 🙌</p>
+  <p style="font-weight: bold;">– Karan Morwani 🙌</p>
 </body>
 </html>
